# gestionReunion

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2024-09-09-122733_create_participants/: down.sql  up.sql
migrations/2024-09-18-135833_create_reunions/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs  participants_controller.rs  reunions_controller.rs
src/models/: database.rs  mod.rs  participants.rs  reunions.rs
src/services/: mod.rs  participants_service.rs  reunions_service.rs
