[package]
name = "diesel_example"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
env_logger = "0.11.3"
diesel = { version = "2.2.1", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
dotenv = "0.15"
r2d2 = "0.8"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
